@@ -31,9 +31,8 @@
                     margin-top:30px;
                     margin-bottom:40px">
             <h3>
-            Help us improve this service - <a href="http://vidyalaya.ideascale.com/"> Share your ideas </a>
+            Help us improve this service - <a href="http://www.formspring.me/vidyalaya"> Share your ideas </a>
             </h3>
         </div>
     </div>
 </div>
-
